[gd_scene load_steps=3 format=3 uid="uid://ckfmytxlgd2jn"]

[ext_resource type="Script" path="res://main.gd" id="1_35lys"]
[ext_resource type="Script" path="res://Inventory/inventory_manager.gd" id="2_xxiwj"]

[node name="Main" type="Node"]
script = ExtResource("1_35lys")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScreenHbox" type="HBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftScreen" type="Panel" parent="UI/ScreenHbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftVBoxContainer" type="VBoxContainer" parent="UI/ScreenHbox/LeftScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="Panel" parent="UI/ScreenHbox/LeftScreen/LeftVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Counter" type="Panel" parent="UI/ScreenHbox/LeftScreen/LeftVBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="StockInterface" type="Control" parent="UI/ScreenHbox/LeftScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RightScreen" type="Panel" parent="UI/ScreenHbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="InventoryInterface" type="Control" parent="UI/ScreenHbox/RightScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xxiwj")

[node name="Golds" type="Label" parent="UI/ScreenHbox/RightScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.68
anchor_top = 0.48
anchor_right = 0.68
anchor_bottom = 0.48
offset_left = -92.0
offset_top = -0.0400085
offset_right = 81.0
offset_bottom = 22.96
text = "0 gold(s)"
horizontal_alignment = 2

[node name="Suppliers" type="Button" parent="UI/ScreenHbox/RightScreen"]
layout_mode = 0
offset_left = 68.0
offset_top = 597.0
offset_right = 228.0
offset_bottom = 628.0
toggle_mode = true
text = "Suppliers and Stock"

[connection signal="pressed" from="UI/ScreenHbox/RightScreen/Suppliers" to="." method="_on_suppliers_pressed"]
